# Task2-Agentics-AI-Repo-01-to-05

./: README.md
agenric -first/ai_agents_first/: 00_swarm.txt  01_uv.txt
agenric -first/ai_agents_first/03_litellm_openai_agents/01_litellm/myproject/: pyproject.toml
agenric -first/ai_agents_first/03_litellm_openai_agents/01_litellm/myproject/src/myproject/: __init__.py  hello.py
agenric -first/ai_agents_first/03_litellm_openai_agents/02_uv_litellm_chainlit/firstAgent/: main.py  pyproject.toml
agenric -first/ai_agents_first/03_litellm_openai_agents/03_lite_llm_agent_sdk/: litellm_agents_sdk.ipynb  pyproject.toml
agenric -first/ai_agents_first/04_hello_agents/hello agent/asynchello/: main.py  pyproject.toml
agenric -first/ai_agents_first/04_hello_agents/hello agent/synchello/synchello/: main.py  pyproject.toml
