[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rabia758", email = "rizwanrabia758@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.71.1",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
